--- a/src/index.css
+++ b/src/index.css
@@ -280,6 +280,10 @@ span {
   .display {
     width: 100%;
     height: 14rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
   .people {
     height: 5%;
@@ -300,6 +304,10 @@ span {
   .sc {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
   .screenparts {
     width: 100%;
